* updated API documentation
